Fixed cover art clipping

--- a/src/Components/Cards/Cards.css
+++ b/src/Components/Cards/Cards.css
@@ -13,8 +13,8 @@
     padding: 10px;
     margin: 10px auto 10px auto;
     border: 1px solid lightgrey;
-    height: 12rem;
-    width: 15rem;
+    height: 15rem;
+    width: 11.25rem;
 }
 
 .gameCover {
